<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context="omg.medved.whoshoutslouder.StartActivity">

    <RelativeLayout
        android:id="@+id/layout_how_many_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/colorAccent">
        <TextView
            android:id="@+id/textview_how_many_players"
            android:textSize="35dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howmanyplayers"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/amount_of_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="0"
            android:layout_below="@+id/textview_how_many_players"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:id="@+id/imagebutton_plus"
            android:onClick="onClick"
            android:layout_toLeftOf="@+id/amount_of_players"
            android:layout_below="@+id/textview_how_many_players"
            android:src="@drawable/ic_add_black_48dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/imagebutton_minus"
            android:onClick="onClick"
            android:layout_below="@+id/textview_how_many_players"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/amount_of_players"
            android:src="@drawable/ic_remove_black_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/listview_players"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/amount_of_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:drawSelectorOnTop="false"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_time_for_game"
        android:layout_below="@+id/layout_how_many_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/time_for_game"
            android:textSize="35dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeforgame"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/amount_of_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:text="0"
            android:layout_below="@+id/time_for_game"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:id="@+id/imagebutton_plus_minutes"
            android:onClick="onClick"
            android:layout_toLeftOf="@+id/amount_of_minutes"
            android:layout_below="@+id/time_for_game"
            android:src="@drawable/ic_add_black_48dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:id="@+id/imagebutton_minus_minutes"
            android:onClick="onClick"
            android:layout_below="@+id/time_for_game"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/amount_of_minutes"
            android:src="@drawable/ic_remove_black_48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_what_word"
        android:layout_below="@+id/layout_time_for_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/colorRed">
        <TextView
            android:id="@+id/what_word"
            android:textSize="35dp"
            android:padding="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whatword"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/edit_word"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35dp"
            android:hint="your's word"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/what_word"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/layout_what_word"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorViolet">>
        <Button
            android:id="@+id/play"
            android:onClick="onClick"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"/>
    </RelativeLayout>

</RelativeLayout>

